--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                     </div>
                     <div class="menu">
                         <div class="menu-bar">|</div>
-                        <div class="menu-icon">
+                        <div class="menu-icon" id="menu-icon">
                             <div></div>
                             <div></div>
                             <div></div>
@@ -72,12 +72,6 @@
                                 <button aria-label="Next Slide" id="carousel-btn-next" class="carousel-btn-next">
                                     ></button>
                     </div>
-                </div>
-                <div class="carousel-nav">
-                    <button class="carousel-indicator current-slide"></button>
-                    <button class="carousel-indicator"></button>
-                    <button class="carousel-indicator"></button>
-                    <button class="carousel-indicator"></button>
                 </div>
             </div>
         </div>
